--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,5 +28,7 @@ jobs:
         run: zef install --/test --test-depends --deps-only .
       - name: Install App::Prove6
         run: zef install --/test App::Prove6
+      - name: Install Test::Output
+        run: zef install --/test Test::Output
       - name: Run Tests
         run: prove6 -I. t
