--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Install Dependencies
         run: zef install --/test --test-depends --deps-only .
       - name: Install App::Prove6
-        run: zef install --/test --verbose App::Prove6
+        run: zef install --/test --debug App::Prove6
       - name: Install Test::Output
         run: zef install --/test Test::Output
       - name: Run Tests
