--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,8 +26,10 @@ jobs:
           raku-version: ${{ matrix.raku-version }}
       - name: Install Dependencies
         run: zef install --/test --test-depends --deps-only .
+      - name: Install sigpipe
+        run: zef install --/test --debug sigpipe
       - name: Install TAP
-        run: zef install --/test --debug TAP
+        run: zef install --debug TAP
       - name: Install App::Prove6
         run: zef install --/test --debug App::Prove6
       - name: Install Test::Output
