--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,7 +32,7 @@ jobs:
         run: |
           git clone https://github.com/Raku/tap-harness6.git
           cd tap-harness6/
-          raku -e 'CompUnit::RepositoryRegistry.repository-for-name("site").install(Distribution::Path.new($*CWD))'
+          raku -e 'CompUnit::RepositoryRegistry.repository-for-name(Q{site}).install(Distribution::Path.new($*CWD))'
       - name: Install TAP clean
         run: zef install --debug TAP --force-test --/prove --raku-test --/tap-harness
       - name: Install TAP normal
