do badges manually

--- a/dist.ini
+++ b/dist.ini
@@ -5,5 +5,5 @@ filename = lib/Grok.rakumod
 
 [UploadToZef]
 
-[Badges]
-provider = github-actions/test.yml
+#[Badges]
+#provider = github-actions/test.yml
