--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,4 +29,24 @@ jobs:
       - name: Install App::Prove6 Test::Output
         run: zef install --/test App::Prove6 Test::Output
       - name: Run Tests
-        run: prove6 -I.,lib t xt
+        run: prove6 -I.,lib t
+  latest:
+    strategy:
+      matrix:
+        os:
+          - ubuntu-latest
+          - macos-latest
+        raku-version:
+          - latest
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v3
+      - uses: Raku/setup-raku@v1
+        with:
+          raku-version: ${{ matrix.raku-version }}
+      - name: Install Dependencies
+        run: zef install --/test --test-depends --deps-only .
+      - name: Install App::Prove6 Test::Output
+        run: zef install --/test App::Prove6 Test::Output
+      - name: Run Tests
+        run: prove6 -I.,lib t
