--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,12 +1,14 @@
 name: test
 
 on:
-  push:
-    branches:
-      - '*'
-    tags-ignore:
-      - '*'
-  pull_request:
+  workflow_dispatch
+  # depends on Kaolin being available as a dist, not yet
+  #push:
+  #  branches:
+  #    - '*'
+  #  tags-ignore:
+  #    - '*'
+  #pull_request:
 
 jobs:
   raku:
@@ -18,6 +20,7 @@ jobs:
           - windows-latest
         raku-version:
           - '2022.07'
+          # - 'latest'
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
